# PTOAS

./: CMakeLists.txt  README.md  _ptoas_build_backend.py
ptodsl/: CMakeLists.txt  README.md
ptodsl/docs/: tilelib-gap-triage-and-handoff.md  tilelib-migration-testing.md  tilelib-st-failures.md  tilelib-template-parity-gaps.md
ptodsl/docs/user_guide/: 01-introduction.md  02-quick-start.md  03-kernel-entry-and-subkernels.md  04-type-system-and-buffer.md  05-control-flow.md  06-scalar-and-pointer-ops.md  07-data-movement-ops.md  08-compute-operations.md  10-sync-ops.md  11-flash-attention-walkthrough.md  12-additional-examples.md  13-simt-micro-ops.md
ptodsl/examples/: dynamic_softmax_launch.py  fast_inverse_dense_launch.py  flash_attention_sketch.py  flash_attention_softmax_launch.py  inverse_block_inversion_launch.py  mixed_backend_kernel_module.py  softmax_dsl.py  tadd_dsl.py  tilelang_codegen.py
ptodsl/examples/flash_attention/: gu.py  softmax.py
ptodsl/examples/rms_norm/: rmsnorm_alloc_buffer_simt.py  rmsnorm_alloc_buffer_simt_launch_common.py  rmsnorm_alloc_buffer_simt_manual_launch.py
ptodsl/ptoas/: __init__.py  _launcher.py
ptodsl/ptodsl/: _allreduce.py  _bootstrap.py  _builtin_vector.py  _diagnostics.py  _kernel_signature.py  _ops.py  _scalar_adaptation.py  _subkernels.py  _surface_types.py  _surface_values.py  _tile_namespace.py  _types.py  pto.py  scalar.py
ptodsl/ptodsl/_tracing/: module_builder.py  runtime.py  session.py
ptodsl/ptodsl/tilelib/: decorator.py  metadata.py
ptodsl/ptodsl/tilelib/serving/: daemon.py
ptodsl/ptodsl/tilelib/templates/a5/: _part.py  (+51 more)
ptodsl/tests/: CMakeLists.txt  test_allreduce.py  test_ast_rewrite_example_ir.py  test_jit_compile.py  test_jit_diagnostics.py  test_ptoas_frontend_verify.py  test_ptoas_wheel_launcher.py  test_subkernel_diagnostics.py  test_tilelib_catalog.py  test_tilelib_daemon.py  test_tilelib_select.py  test_tileop.py  test_vector_cube_ops.py
ptodsl/tests/e2e/: common.py  test_binary_elementwise.py  test_scalar_elementwise.py  test_unary_elementwise.py
ptodsl/tests/support/: docs_fragment_fixtures.py
(+225 files in other folders)
